--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
 <!-- header -->
@@ -24,6 +24,16 @@
   </div>
 </section>
 <!-- !header -->
-    
+
+    <!--main-->
+    <section class="section-outer section-main">
+      <div class="section-inner section-main__container">
+        <div class="main__text">
+          <span>build</span><span>your</span><span>body</span>
+        </div>
+        <div class="main__button"><a href="#section-start">начать</a></div>
+      </div>
+    </section>
+    <!-- !main -->
   </body>
 </html>
