дипломный проект:Страница Тренировки

--- a/#source/header.html
+++ b/#source/header.html
@@ -2,11 +2,15 @@
 <section class="section-outer section-header">
   <div class="section-inner section-header__container">
     <div class="header__logo">
-      <img class="logo" src="img/logo.png" alt="Логотип" />
+      <a href="../main.html"
+        ><img class="logo" src="img/logo.png" alt="Логотип"
+      /></a>
     </div>
     <ul class="header__nav">
-      <li class="nav__item"><a href="#home">С чего начать?</a></li>
-      <li class="nav__item"><a href="#about-me">База упражнений</a></li>
+      <li class="nav__item">
+        <a href="../main.html#section-start">С чего начать?</a>
+      </li>
+      <li class="nav__item"><a href="../exercises.html">База упражнений</a></li>
       <li class="nav__item"><a href="#skills">Питание</a></li>
       <li class="nav__item"><a href="#portfolio">Программы</a></li>
       <li class="nav__item"><a href="#contacts">Калькуляторы</a></li>
