--- a/main.html
+++ b/main.html
@@ -12,11 +12,15 @@
 <section class="section-outer section-header">
   <div class="section-inner section-header__container">
     <div class="header__logo">
-      <img class="logo" src="img/logo.png" alt="Логотип" />
+      <a href="../main.html"
+        ><img class="logo" src="img/logo.png" alt="Логотип"
+      /></a>
     </div>
     <ul class="header__nav">
-      <li class="nav__item"><a href="#home">С чего начать?</a></li>
-      <li class="nav__item"><a href="#about-me">База упражнений</a></li>
+      <li class="nav__item">
+        <a href="../main.html#section-start">С чего начать?</a>
+      </li>
+      <li class="nav__item"><a href="../exercises.html">База упражнений</a></li>
       <li class="nav__item"><a href="#skills">Питание</a></li>
       <li class="nav__item"><a href="#portfolio">Программы</a></li>
       <li class="nav__item"><a href="#contacts">Калькуляторы</a></li>
@@ -61,7 +65,7 @@
               <div class="text-block__number-and-image">
                 <div class="number-and-image__number"><span>1</span></div>
                 <div class="number-and-image__image">
-                  <img src="img/food-icon.png" alt="" />
+                  <img src="img/main/food-icon.png" alt="" />
                 </div>
               </div>
             </div>
@@ -83,7 +87,7 @@
               <div class="text-block__number-and-image">
                 <div class="number-and-image__number"><span>2</span></div>
                 <div class="number-and-image__image">
-                  <img src="img/ganteli-icon.png" alt="" />
+                  <img src="img/main/ganteli-icon.png" alt="" />
                 </div>
               </div>
             </div>
@@ -105,7 +109,7 @@
               <div class="text-block__number-and-image">
                 <div class="number-and-image__number"><span>3</span></div>
                 <div class="number-and-image__image">
-                  <img src="img/sleep-icon.png" alt="" />
+                  <img src="img/main/sleep-icon.png" alt="" />
                 </div>
               </div>
             </div>
@@ -123,7 +127,7 @@
             <div class="item__title"><h3>Набор массы</h3></div>
             <div class="item__content">
               <div class="content__image">
-                <img src="img/skinny-timon.png" alt="" />
+                <img src="img/main/skinny-timon.png" alt="" />
               </div>
               <div class="content__text-and-button">
                 <div class="text-and-button__text">
@@ -144,7 +148,7 @@
             <div class="item__title"><h3>Похудение</h3></div>
             <div class="item__content">
               <div class="content__image">
-                <img src="img/fat-pumba.png" alt="" />
+                <img src="img/main/fat-pumba.png" alt="" />
               </div>
               <div class="content__text-and-button">
                 <div class="text-and-button__text">
@@ -173,7 +177,7 @@
         <div class="section-trens__list">
           <div class="list__item">
             <div class="item__image">
-              <img src="img/silovie.png" alt="" />
+              <img src="img/main/silovie.png" alt="" />
             </div>
             <div class="item__title">
               <h3>Силовые тренировки</h3>
@@ -187,7 +191,7 @@
           </div>
           <div class="list__item">
             <div class="item__image">
-              <img src="img/cardio.png" alt="" />
+              <img src="img/main/cardio.png" alt="" />
             </div>
             <div class="item__title">
               <h3>Кардио тренировки</h3>
@@ -201,7 +205,7 @@
           </div>
           <div class="list__item">
             <div class="item__image">
-              <img src="img/calestenica.png" alt="" />
+              <img src="img/main/calestenica.png" alt="" />
             </div>
             <div class="item__title">
               <h3>Работа со своим весом</h3>
@@ -217,5 +221,9 @@
       </div>
     </section>
     <!-- !trens -->
+    <!-- scripts -->
+    <script src="/js/jquery-3.6.0.min.js"></script>
+    <script src="/js/script.js"></script>
+    <!-- !scripts -->
   </body>
 </html>
