--- a/exercises.html
+++ b/exercises.html
@@ -12,18 +12,18 @@
 <section class="section-outer section-header">
   <div class="section-inner section-header__container">
     <div class="header__logo">
-      <a href="../main.html"
+      <a href="main.html"
         ><img class="logo" src="img/logo.png" alt="Логотип"
       /></a>
     </div>
     <ul class="header__nav">
       <li class="nav__item">
-        <a href="../main.html#section-start">С чего начать?</a>
+        <a href="main.html#section-start">С чего начать?</a>
       </li>
-      <li class="nav__item"><a href="../exercises.html">База упражнений</a></li>
+      <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
       <li class="nav__item"><a href="#skills">Питание</a></li>
       <li class="nav__item"><a href="#portfolio">Программы</a></li>
-      <li class="nav__item"><a href="#contacts">Калькуляторы</a></li>
+      <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
     </ul>
   </div>
 </section>
@@ -55,7 +55,7 @@
                 <a href="#chest-1" class="popup-link item__link to-chest-1">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
+                      src="img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
                       alt=""
                     />
                   </div>
@@ -68,7 +68,7 @@
                 <a href="#chest-2" class="popup-link item__link to-chest-2">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
+                      src="img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
                       alt=""
                     />
                   </div>
@@ -80,7 +80,7 @@
                 <a href="#chest-3" class="popup-link item__link to-chest-3">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
+                      src="img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
                       alt=""
                     />
                   </div>
@@ -91,10 +91,7 @@
               <div class="upr__item upr__item-4">
                 <a href="#chest-4" class="popup-link item__link to-chest-4">
                   <div class="item__image">
-                    <img
-                      src="../img/exercices/chest/Грудь-отжимания.png"
-                      alt=""
-                    />
+                    <img src="img/exercices/chest/Грудь-отжимания.png" alt="" />
                   </div>
                   <p class="item__text"></p>
                   <h3 class="item__title">Анжумания</h3>
@@ -104,7 +101,7 @@
                 <a href="#chest-5" class="popup-link item__link to-chest-5">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-отжимания-на-брусьях.png"
+                      src="img/exercices/chest/Грудь-отжимания-на-брусьях.png"
                       alt=""
                     />
                   </div>
@@ -116,7 +113,7 @@
                 <a href="#chest-6" class="popup-link item__link to-chest-6">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим-свенда.png"
+                      src="img/exercices/chest/Грудь-жим-свенда.png"
                       alt=""
                     />
                   </div>
@@ -137,7 +134,7 @@
                 <a href="#chest-1" class="popup-link item__link to-chest-1">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
+                      src="img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
                       alt=""
                     />
                   </div>
@@ -149,7 +146,7 @@
                 <a href="#chest-2" class="popup-link item__link to-chest-2">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
+                      src="img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
                       alt=""
                     />
                   </div>
@@ -161,7 +158,7 @@
                 <a href="#chest-3" class="popup-link item__link to-chest-3">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
+                      src="img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
                       alt=""
                     />
                   </div>
@@ -182,7 +179,7 @@
                 <a href="#chest-1" class="popup-link item__link to-chest-1">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
+                      src="img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
                       alt=""
                     />
                   </div>
@@ -194,7 +191,7 @@
                 <a href="#chest-2" class="popup-link item__link to-chest-2">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
+                      src="img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
                       alt=""
                     />
                   </div>
@@ -206,7 +203,7 @@
                 <a href="#chest-3" class="popup-link item__link to-chest-3">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
+                      src="img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
                       alt=""
                     />
                   </div>
@@ -227,7 +224,7 @@
                 <a href="#chest-1" class="popup-link item__link to-chest-1">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
+                      src="img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
                       alt=""
                     />
                   </div>
@@ -239,7 +236,7 @@
                 <a href="#chest-2" class="popup-link item__link to-chest-2">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
+                      src="img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
                       alt=""
                     />
                   </div>
@@ -251,7 +248,7 @@
                 <a href="#chest-3" class="popup-link item__link to-chest-3">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
+                      src="img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
                       alt=""
                     />
                   </div>
@@ -272,7 +269,7 @@
                 <a href="#chest-1" class="popup-link item__link to-chest-1">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
+                      src="img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
                       alt=""
                     />
                   </div>
@@ -284,7 +281,7 @@
                 <a href="#chest-2" class="popup-link item__link to-chest-2">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
+                      src="img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
                       alt=""
                     />
                   </div>
@@ -296,7 +293,7 @@
                 <a href="#chest-3" class="popup-link item__link to-chest-3">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
+                      src="img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
                       alt=""
                     />
                   </div>
@@ -317,7 +314,7 @@
                 <a href="#chest-1" class="popup-link item__link to-chest-1">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
+                      src="img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
                       alt=""
                     />
                   </div>
@@ -329,7 +326,7 @@
                 <a href="#chest-2" class="popup-link item__link to-chest-2">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
+                      src="img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
                       alt=""
                     />
                   </div>
@@ -341,7 +338,7 @@
                 <a href="#chest-3" class="popup-link item__link to-chest-3">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
+                      src="img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
                       alt=""
                     />
                   </div>
@@ -362,7 +359,7 @@
                 <a href="#chest-1" class="popup-link item__link to-chest-1">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
+                      src="img/exercices/chest/Грудь-жим_лежа-removebg-preview.png"
                       alt=""
                     />
                   </div>
@@ -374,7 +371,7 @@
                 <a href="#chest-2" class="popup-link item__link to-chest-2">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
+                      src="img/exercices/chest/Грудь-жим-в-кроссовере-на-середину.png"
                       alt=""
                     />
                   </div>
@@ -386,7 +383,7 @@
                 <a href="#chest-3" class="popup-link item__link to-chest-3">
                   <div class="item__image">
                     <img
-                      src="../img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
+                      src="img/exercices/chest/Грудь-разводки-гантелей-в-наклоне.png"
                       alt=""
                     />
                   </div>
@@ -408,7 +405,7 @@
           <a href="#header" class="popup__close close-popup">X</a>
           <div class="popup__title">Жим лёжа</div>
           <div class="popup__image">
-            <img src="./img/exercices/chest/chest-1-popup.jpg" alt="" />
+            <img src="img/exercices/chest/chest-1-popup.jpg" alt="" />
           </div>
           <div class="popup__text">
             <h3>Описание</h3>
@@ -470,7 +467,7 @@
           <a href="#header" class="popup__close close-popup">X</a>
           <div class="popup__title">Сведения рук в кросовере</div>
           <div class="popup__image">
-            <img src="./img/exercices/chest/chest-2-popup.jpg" alt="" />
+            <img src="img/exercices/chest/chest-2-popup.jpg" alt="" />
           </div>
           <div class="popup__text">
             <h3>Описание</h3>
@@ -539,8 +536,8 @@
     </div>
     <!-- !popups -->
     <!-- scripts -->
-    <script src="/js/jquery-3.6.0.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/script.js"></script>
     <!-- !scripts -->
   </body>
 </html>
