--- a/main.html
+++ b/main.html
@@ -12,18 +12,18 @@
 <section class="section-outer section-header">
   <div class="section-inner section-header__container">
     <div class="header__logo">
-      <a href="../main.html"
+      <a href="main.html"
         ><img class="logo" src="img/logo.png" alt="Логотип"
       /></a>
     </div>
     <ul class="header__nav">
       <li class="nav__item">
-        <a href="../main.html#section-start">С чего начать?</a>
+        <a href="main.html#section-start">С чего начать?</a>
       </li>
-      <li class="nav__item"><a href="../exercises.html">База упражнений</a></li>
+      <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
       <li class="nav__item"><a href="#skills">Питание</a></li>
       <li class="nav__item"><a href="#portfolio">Программы</a></li>
-      <li class="nav__item"><a href="#contacts">Калькуляторы</a></li>
+      <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
     </ul>
   </div>
 </section>
@@ -222,8 +222,8 @@
     </section>
     <!-- !trens -->
     <!-- scripts -->
-    <script src="/js/jquery-3.6.0.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/script.js"></script>
     <!-- !scripts -->
   </body>
 </html>
