дипломный проект:Страница Таблица калорийности

--- a/main.html
+++ b/main.html
@@ -21,9 +21,12 @@
         <a href="main.html#section-start">С чего начать?</a>
       </li>
       <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
-      <li class="nav__item"><a href="#skills">Питание</a></li>
+      <li class="nav__item"><a href="pitanie.html">Питание</a></li>
       <li class="nav__item"><a href="#portfolio">Программы</a></li>
       <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
+      <li class="nav__item">
+        <a href="calories.html">Таблица калорийности</a>
+      </li>
     </ul>
   </div>
 </section>
@@ -100,10 +103,16 @@
               <div class="text-block__text">
                 <h3>Отдых</h3>
                 <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Repellat delectus placeat harum deleniti ipsum dolore
-                  obcaecati quae amet nulla fuga, sed corporis culpa
-                  necessitatibus nisi rerum quam quos at alias.
+                  Отдых – самый недооцененный элемент тренировок. Независимо от
+                  того, насколько долго вы терпели боль последних повторений и
+                  как старательно добирали белок и калории в своем рационе, –
+                  это не так важно, как время, которое необходимо для содействия
+                  нутриентов и гормонов для синтеза мышечных белков после
+                  занятия. Упражнения и еда – это важная часть уравнения
+                  мышечного роста, но далеко не все. Очень важно адекватное
+                  восстановление – необходимо дать мышцам достаточно времени для
+                  пополнения запасов гликогена и протекания процессов
+                  реконструкции и создания новой мышечной ткани.
                 </p>
               </div>
               <div class="text-block__number-and-image">
@@ -221,6 +230,47 @@
       </div>
     </section>
     <!-- !trens -->
+<!-- Site footer -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+<footer class="site-footer">
+  <div class="section-inner">
+    <div class="container">
+      <p class="copyright-text">
+        Copyright &copy; 2022 Created by <a href="#">Semur Mollaev</a>.
+      </p>
+      <ul class="social-icons">
+        <li>
+          <a class="facebook" href="https://vk.com/bg_prostak"
+            ><i class="fa fa-vk"></i
+          ></a>
+        </li>
+        <li>
+          <a class="twitter" href="#"><i class="fa fa-instagram"></i></a>
+        </li>
+        <li>
+          <a class="dribbble" href="#"><i class="fa fa-github"></i></a>
+        </li>
+        <li>
+          <div class="button music1">
+            <a class="linkedin" href="#"
+              ><i class="fa fa-music" aria-hidden="true"></i
+            ></a>
+          </div>
+        </li>
+      </ul>
+
+      <audio id="sound-link" preload="auto">
+        <source src="audio/12.mp3" type="audio/mpeg" />
+      </audio>
+
+      <script src="js/jquery-3.6.0.min.js"></script>
+      <script src="js/script.js"></script>
+    </div>
+  </div>
+</footer>
     <!-- scripts -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/script.js"></script>
