дипломный проект:Калькуляторы, Таблица калорийности, упражнения, футер(доработка)

--- a/#source/footer.html
+++ b/#source/footer.html
@@ -30,9 +30,9 @@
         </li>
       </ul>
 
-      <audio id="sound-link" preload="auto">
+      <!-- <audio id="sound-link" preload="auto">
         <source src="audio/12.mp3" type="audio/mpeg" />
-      </audio>
+      </audio> -->
 
       <script src="js/jquery-3.6.0.min.js"></script>
       <script src="js/script.js"></script>
