--- a/exercises.html
+++ b/exercises.html
@@ -21,8 +21,8 @@
         <a href="main.html#section-start">С чего начать?</a>
       </li>
       <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
-      <li class="nav__item"><a href="pitanie.html">Питание</a></li>
-      <li class="nav__item"><a href="#portfolio">Программы</a></li>
+      <li class="nav__item"><a href="#">Питание</a></li>
+      <li class="nav__item"><a href="#">Программы</a></li>
       <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
       <li class="nav__item">
         <a href="calories.html">Таблица калорийности</a>
@@ -46,6 +46,9 @@
     <!-- exercices -->
     <section class="section-outer section-exercices" id="section-exercices">
       <div class="section-inner section-exercices__container">
+        <div class="section-exercices__title">
+          <h3>Группы мышц</h3>
+        </div>
         <div class="section-exercices__list">
           <div class="list__group list-group-1">
             <button class="group__item__button">
@@ -570,9 +573,9 @@
         </li>
       </ul>
 
-      <audio id="sound-link" preload="auto">
+      <!-- <audio id="sound-link" preload="auto">
         <source src="audio/12.mp3" type="audio/mpeg" />
-      </audio>
+      </audio> -->
 
       <script src="js/jquery-3.6.0.min.js"></script>
       <script src="js/script.js"></script>
