--- a/#source/header.html
+++ b/#source/header.html
@@ -11,8 +11,8 @@
         <a href="main.html#section-start">С чего начать?</a>
       </li>
       <li class="nav__item"><a href="exercises.html">База упражнений</a></li>
-      <li class="nav__item"><a href="pitanie.html">Питание</a></li>
-      <li class="nav__item"><a href="#portfolio">Программы</a></li>
+      <li class="nav__item"><a href="#">Питание</a></li>
+      <li class="nav__item"><a href="#">Программы</a></li>
       <li class="nav__item"><a href="calcs.html">Калькуляторы</a></li>
       <li class="nav__item">
         <a href="calories.html">Таблица калорийности</a>
